--- a/CSS/pembayaran.css
+++ b/CSS/pembayaran.css
@@ -338,7 +338,7 @@ h5{
   .line{
         width: 80px;
         height: 0px;
-        border: 2px solid #202020;
+        background: #202020;
   }
 
   .step-2{
