Responsive landing page
card, button, navbar, dll

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,14 +44,11 @@ nav + .scroll{
     margin: 150px auto 0; 
     padding: 0; 
     list-style: none; 
-    display: table;
-    width: 600px;
-    text-align: center;
   }
 .nav-item { 
-    display: table-cell; 
     position: relative; 
 }
+
 .nav-link:after {    
     background: none repeat scroll 0 0 transparent;
     bottom: 0;
@@ -113,11 +110,15 @@ nav + .scroll{
     font-size: 2.5rem;
     line-height: 60px;
     font-weight: bold;
+    margin-bottom: 2rem;
+    margin-top: 2.5rem;
+
 }
 .box-para{
     width: 460px;
     font-size: 1.25rem;
     font-weight: normal;
+    margin-bottom: 2.5rem;
 }
 .box-img{
     position: relative;
@@ -142,6 +143,9 @@ nav + .scroll{
     text-align: center;
     font-weight: 500;
     font-size: 1rem;
+    margin-top: 2.5rem;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
 }
 .category{
     text-decoration: none;
@@ -188,6 +192,9 @@ nav + .scroll{
 .card-img-top{
     max-height: 200px;
     max-width: 100%;
+}
+.modal{
+    border-radius:10px;
 }
 .modal-header{
     padding: 0px;
@@ -268,3 +275,123 @@ nav + .scroll{
 }
 
 
+@media only screen and (max-width : 900px){
+    .navbar{
+        padding: 0;
+    }
+    .navbar-nav{
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+    .navbar-nav .nav-item{
+        text-align: center;
+        padding: 5px;
+    }
+    .navbar-nav .nav-item::marker{
+        padding: 0;
+        margin: 0;
+    }
+    .navbar-nav .nav-item .nav-link{
+        color: white;
+    }
+    .navbar-nav .nav-item a{
+        color: white;
+        background-color: transparent;
+    }
+    .nav-link{
+        color: white;
+    }
+    #nav-btn{
+        font-family: 'Poppins', sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        color: white;
+        padding: 0;
+        text-decoration: none;
+        display: inline-block;
+        position: relative;
+    }
+    #nav-btn:after {    
+        background: none repeat scroll 0 0 transparent;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 2px;
+        left: 50%;
+        position: absolute;
+        background: #fff;
+        background: var(--nav-link-line, #fff);
+        transition: width 0.3s ease 0s, left 0.3s ease 0s;
+        width: 0;
+      }
+    #nav-btn:hover:after { 
+        width: 100%; 
+        left: 0; 
+      }
+    .box-atas{
+        display: none;
+    }
+    .box-tengah{
+        margin: 0 !important;
+        border-radius: 0;
+    }
+    .box-title{
+        font-size: 1.75rem;
+        line-height: 40px;
+    }
+    .box-para{
+        font-size: 1rem;
+        font-weight: 300;
+        width: 275px;
+    }
+    .box-bawah{
+        display: none;
+    }
+    .box-tengah div .btn-lg{
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    .box-img{
+        width: 175px;
+        height: auto;
+        left: 225px;
+        margin-top: -130px;
+    }
+    .category-img{
+        display: none;
+    }
+    .card-category{
+        margin : 2.5rem 0 0 0;
+    }
+    .category{
+        margin: 0;
+    }
+    .modal{
+        left: 5%;
+        top: 15%;
+        width: 90%;
+        height:70%;
+    }
+    .modal-body-title{
+        font-size: 16px;
+        line-height: 21px;
+    }
+    .modal-body-para{
+        font-size: 12px;
+        line-height: 18px;
+    }
+    .modal-body ul{
+        font-size: 12px;
+        line-height: 18px;
+    }
+    .modal-footer .btn-lg{
+        font-size: 14px;
+        padding: .5rem 1rem;
+    }
+    .modal-footer .btn-lg{
+        font-size: 14px;
+        padding: .5rem 1rem;
+    }
+    .modal-footer .btn-lg:hover{
+        border: 1px solid #FE6534;
+    }
+}
